--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@uploadthing/react": "^7.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "copy-to-clipboard": "^3.3.3",
     "date-fns": "3.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
