--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.6.4",
+    "@clerk/themes": "^2.1.35",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
