--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.6.4",
     "@clerk/themes": "^2.1.35",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -34,6 +35,7 @@
     "next": "14.2.13",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
+    "react-csv": "^2.2.2",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -47,6 +49,7 @@
   "devDependencies": {
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.10",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.3.0",
     "drizzle-kit": "^0.24.2",
     "eslint": "^8.57.1",
